@@ -91,6 +91,7 @@
 #include <unistd.h>    /* added - CRI 9/05 */
 #include <sys/time.h>
 #include <sys/socket.h>
+#include <sys/un.h>
 #include <netinet/in.h>
 #include <arpa/inet.h>
 
@@ -134,6 +135,7 @@ static int	num_connections = 0;
 static fd_set	readset;
 static void	(*read_func[2]) A_((int));
 static enum     conn_type settype[2];		/* temp kludge */
+static int unixsocket;
 
 pbs_net_t pbs_server_addr;
 
@@ -232,6 +234,7 @@ int init_network(
   static int	 initialized = 0;
   int 		 sock;
   struct sockaddr_in socname;
+  struct sockaddr_un unsocname;
   enum conn_type   type;
 
   if (initialized == 0) 
@@ -289,7 +292,7 @@ int init_network(
 	
   /* record socket in connection structure and select set */
 
-  add_conn(sock,type,(pbs_net_t)0,0,accept_conn);
+  add_conn(sock,type,(pbs_net_t)0,0,PBS_SOCK_INET,accept_conn);
 	
   /* start listening for connections */
 
@@ -298,6 +301,33 @@ int init_network(
 
     return(-1);
     }
+
+
+  /* setup unix domain socket */
+
+  unixsocket=socket(AF_UNIX,SOCK_STREAM,0);
+  if (unixsocket < 0) 
+    {
+    return(-1);
+    }
+
+  unsocname.sun_family=AF_UNIX;
+  strcpy(unsocname.sun_path,TSOCK_PATH);
+  unlink(unsocname.sun_path);
+  if (bind(unixsocket,(struct sockaddr *)&unsocname,strlen(unsocname.sun_path) + sizeof(unsocname.sun_family)) < 0) 
+    {
+    close(unixsocket);
+
+    return(-1);
+    }
+  chmod(TSOCK_PATH,00777);
+  add_conn(unixsocket,type,(pbs_net_t)0,0,PBS_SOCK_UNIX,accept_conn);
+  if (listen(unixsocket,512) < 0) 
+    {
+
+    return(-1);
+    }
+
 
   /* allocate a minute's worth of counter structs */
 
@@ -483,6 +513,7 @@ static void accept_conn(
   {
   int newsock;
   struct sockaddr_in from;
+  struct sockaddr_un unixfrom;
 
   torque_socklen_t fromsize;
 	
@@ -490,9 +521,17 @@ static void accept_conn(
 
   svr_conn[sd].cn_lasttime = time((time_t *)0);
 
-  fromsize = sizeof(from);
 
-  newsock = accept(sd,(struct sockaddr *)&from,&fromsize);
+  if (svr_conn[sd].cn_socktype == PBS_SOCK_INET)
+    {
+    fromsize = sizeof(from);
+    newsock = accept(sd,(struct sockaddr *)&from,&fromsize);
+    }
+  else
+    {
+    fromsize = sizeof(unixfrom);
+    newsock = accept(sd,(struct sockaddr *)&unixfrom,&fromsize);
+    }
 
   if (newsock == -1) 
     {
@@ -514,6 +553,7 @@ static void accept_conn(
     FromClientDIS, 
     (pbs_net_t)ntohl(from.sin_addr.s_addr),
     (unsigned int)ntohs(from.sin_port),
+    svr_conn[sd].cn_socktype,
     read_func[(int)svr_conn[sd].cn_active]);
 
   return;
@@ -533,6 +573,7 @@ void add_conn(
   enum conn_type type,	   /* type of connection */
   pbs_net_t      addr,	   /* IP address of connected host */
   unsigned int   port,	   /* port number (host order) on connected host */
+  unsigned int   socktype, /* inet or unix */
   void (*func) A_((int)))  /* function to invoke on data rdy to read */
 
   {
@@ -546,9 +587,10 @@ void add_conn(
   svr_conn[sock].cn_lasttime = time((time_t *)0);
   svr_conn[sock].cn_func     = func;
   svr_conn[sock].cn_oncl     = 0;
+  svr_conn[sock].cn_socktype = socktype;
 
 #ifndef NOPRIVPORTS
-  if (port < IPPORT_RESERVED)
+  if (socktype == PBS_SOCK_INET && port < IPPORT_RESERVED)
     svr_conn[sock].cn_authen = PBS_NET_CONN_FROM_PRIVIL;
   else
     svr_conn[sock].cn_authen = 0;
