@@ -87,6 +87,7 @@
 #include <netinet/in.h>
 #include <memory.h>
 #include <time.h>
+#include <pwd.h>
 #include "libpbs.h"
 #include "pbs_error.h"
 #include "server_limits.h"
@@ -132,6 +133,9 @@ extern char  *msg_err_noqueue;
 extern char  *msg_err_malloc;
 extern char  *msg_reqbadhost;
 extern char  *msg_request;
+#ifndef PBS_MOM
+extern char            server_name[];
+#endif
 
 extern int LOGLEVEL;
 
@@ -183,6 +187,72 @@ void req_deletearray(struct batch_request *preq);
 
 /* END request processing prototypes */
 
+
+#ifndef PBS_MOM
+ucreds *get_creds(int sd,char *username,char *hostname) {
+  int             nb/*, sync*/;
+  char            ctrl[CMSG_SPACE(sizeof(struct ucred))];
+  size_t          size;
+  struct iovec    iov[1];
+  struct msghdr   msg;
+  struct cmsghdr  *cmptr;
+  ucreds *credentials;
+  struct passwd *cpwd;
+  char dummy;
+
+  msg.msg_name=NULL;
+  msg.msg_namelen=0;
+  msg.msg_iov=iov;
+  msg.msg_iovlen=1;
+  msg.msg_control=ctrl;
+  msg.msg_controllen=sizeof(ctrl);
+  msg.msg_flags=0;
+
+#ifdef LOCAL_CREDS
+  nb = 1;
+  if (setsockopt(sd, 0, LOCAL_CREDS, &nb, sizeof(nb)) == -1) return 0;
+#else
+#ifdef SO_PASSCRED
+  nb = 1;
+  if (setsockopt(sd, SOL_SOCKET, SO_PASSCRED, &nb, sizeof(nb)) == -1)
+    return 0;
+#endif
+#endif
+
+  dummy='\0';
+
+  do {
+    msg.msg_iov->iov_base = (void *)&dummy;
+    msg.msg_iov->iov_len  = sizeof(dummy);
+    nb = recvmsg(sd, &msg, 0);
+  } while (nb == -1 && (errno == EINTR || errno == EAGAIN));
+  if (nb == -1) return 0;
+
+  if (msg.msg_controllen < sizeof(struct cmsghdr)) return 0;
+  cmptr = CMSG_FIRSTHDR(&msg);
+#ifndef __NetBSD__
+  size = sizeof(ucreds);
+#else
+  if (cmptr->cmsg_len < SOCKCREDSIZE(0)) return 0;
+  size = SOCKCREDSIZE(((cred *)CMSG_DATA(cmptr))->sc_ngroups);
+#endif
+  if (cmptr->cmsg_len != CMSG_LEN(size)) return 0;
+  if (cmptr->cmsg_level != SOL_SOCKET) return 0;
+  if (cmptr->cmsg_type != SCM_CREDS) return 0;
+
+  if (!(credentials = (ucreds *)malloc(size))) return 0;
+  *credentials = *(ucreds *)CMSG_DATA(cmptr);
+
+  cpwd=getpwuid(SPC_PEER_UID(credentials));
+
+  if (cpwd)
+    strcpy(username,cpwd->pw_name);
+
+  strcpy(hostname,server_name);
+
+  return credentials;
+}
+#endif
                        
 
 /*
@@ -219,6 +289,11 @@ void process_request(
 
   if (svr_conn[sfds].cn_active == FromClientDIS) 
     {
+    if ((svr_conn[sfds].cn_socktype & PBS_SOCK_UNIX) &&
+        (svr_conn[sfds].cn_authen != PBS_NET_CONN_AUTHENTICATED))
+      {
+      get_creds(sfds,conn_credent[sfds].username,conn_credent[sfds].hostname);
+      }
     rc = dis_request_read(sfds,request);
     } 
   else 
@@ -316,6 +391,11 @@ void process_request(
 
 #ifndef PBS_MOM
 
+if (svr_conn[sfds].cn_socktype & PBS_SOCK_UNIX)
+  {
+  strcpy(request->rq_host,server_name);
+  }
+
   if (server.sv_attr[(int)SRV_ATR_acl_host_enable].at_val.at_long) 
     {
     /* acl enabled, check it; always allow myself and nodes */
@@ -368,22 +448,33 @@ void process_request(
     request->rq_fromsvr = 0;
 
     /*
-     * Client must be authenticated by a Authenticate User Request,
-     * if not, reject request and close connection.
-     * -- The following is retained for compat with old cmds --
-     * The exception to this is of course the Connect Request which
-     * cannot have been authenticated, because it contains the 
-     * needed ticket; so trap it here.  Of course, there is no
-     * prior authentication on the Authenticate User request either,
-     * but it comes over a reserved port and appears from another
-     * server, hence is automatically granted authorization.
+     * Client must be authenticated by an Authenticate User Request, if not,
+     * reject request and close connection.  -- The following is retained for
+     * compat with old cmds -- The exception to this is of course the Connect
+     * Request which cannot have been authenticated, because it contains the
+     * needed ticket; so trap it here.  Of course, there is no prior
+     * authentication on the Authenticate User request either, but it comes
+     * over a reserved port and appears from another server, hence is
+     * automatically granted authentication.
+     *
+     * The above is only true with inet sockets.  With unix domain sockets, the
+     * user creds were read before the first dis_request_read call above.
+     * We automatically granted authentication because we can trust the socket
+     * creds.  Authorization is still granted in svr_get_privilege below 
      */
 	
     if (request->rq_type == PBS_BATCH_Connect) 
       {
       req_connect(request);
 
-      return;
+      if (svr_conn[sfds].cn_socktype == PBS_SOCK_INET)
+        return;
+
+      }
+
+    if (svr_conn[sfds].cn_socktype & PBS_SOCK_UNIX)
+      {
+      svr_conn[sfds].cn_authen = PBS_NET_CONN_AUTHENTICATED;
       }
 
     if (svr_conn[sfds].cn_authen != PBS_NET_CONN_AUTHENTICATED)
@@ -399,7 +490,7 @@ void process_request(
 
       return;
       }
-	
+       
     request->rq_perm = svr_get_privilege(request->rq_user,request->rq_host);
     }  /* END else (svr_conn[sfds].cn_authen == PBS_NET_CONN_FROM_PRIVIL) */
 
